incremental reparse of injected fragments